[tool.poetry]
name = "jonh-hypermodern"
authors = ["Jon Palle Hansen <jonh@demant.com>"]
version = "0.1.0"
description = "JONHs hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jonh-at-demant/jonh-hypermodern"
repository = "https://github.com/jonh-at-demant/jonh-hypermodern"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
